# Finance-tracker

./: .env  .env.example  .gitignore  financeTracker.db  main.py  pyproject.toml
db/: database.py  models.py
middlewares/: authMiddleWare.py
routes/: authRoutes.py  categoryRoutes.py  transactions.py
schemas/: schemas.py
src/: settings.py
utils/: token_store.py  utils.py
